# Modules/Auth/routes/api.php
@@ -8,5 +8,6 @@ Route::post('login', [AuthController::class, 'login'])->name('login');
 
 Route::middleware('jwt.auth')->group(function () {
     Route::post('logout', [AuthController::class, 'logout'])->name('logout');
+    Route::delete('delete-account', [AuthController::class, 'deleteAccount'])->name('delete-account');
     Route::get('profile', [AuthController::class, 'profile'])->name('profile');
 });
